# milvus-storage

./: README.md
.github/workflows/: cpp-ci.yml
cpp/: CMakeLists.txt  Makefile  conanfile.py  ffi_exports.map  ffi_exports_mac.map
cpp/benchmark/: CMakeLists.txt  benchmark.md  benchmark_compression.cpp  benchmark_data_loader.cpp  benchmark_data_loader.h  benchmark_format_common.h  benchmark_format_read.cpp  benchmark_format_write.cpp  benchmark_storage_layer.cpp  benchmark_v2_v3.cpp  benchmark_wr.cpp
cpp/include/milvus-storage/: async_read_options.h  column_groups.h  ffi_c.h  manifest.h  properties.h  reader.h  thread_pool.h
cpp/include/milvus-storage/common/: config.h  constants.h
cpp/include/milvus-storage/filesystem/: fs.h  upload_sizable.h
cpp/include/milvus-storage/filesystem/azure/: azurefs.h
cpp/include/milvus-storage/filesystem/s3/: multi_part_upload_s3_fs.h  s3_filesystem.h
cpp/include/milvus-storage/format/: column_group_lazy_reader.h  column_group_reader.h  field_caster.h  format_reader.h  schema_caster.h
cpp/include/milvus-storage/format/lance/: lance_table_reader.h  lance_table_writer.h
cpp/include/milvus-storage/format/parquet/: parquet_chunk_reader.h  parquet_format_reader.h
cpp/include/milvus-storage/format/vortex/: vortex_format_reader.h  vortex_v2_format_reader.h  vortex_v2_writer.h
cpp/scripts/: coverage-report.sh
cpp/src/: column_groups.cpp  manifest.cpp  properties.cpp  reader.cpp  writer.cpp
cpp/src/common/: metadata.cpp
cpp/src/ffi/: bridge.cpp  exttable_c.cpp  filesystem_c.cpp  manifest_c.cpp  properties_c.cpp  reader_c.cpp  segment_reader_c.cpp  segment_writer_c.cpp  v2_packed_writer_c.cpp
cpp/src/filesystem/: fs.cpp
cpp/src/filesystem/azure/: azurefs.cc
cpp/src/filesystem/ffi/: cppfs.cpp
cpp/src/filesystem/s3/: s3_filesystem.cpp  s3_fs.cpp
cpp/src/format/: column_group_lazy_reader.cpp  column_group_reader.cpp  column_group_writer.cpp  field_caster.cpp  format.cpp  format_reader.cpp  schema_caster.cpp
cpp/src/format/bridge/rust/: CMakeLists.txt  Cargo.toml
cpp/src/format/bridge/rust/include/: lance_bridge.h  lance_bridge.hpp  vortex_bridge.h
cpp/src/format/bridge/rust/src/: filesystem_c.rs  iceberg_bridgeimpl.rs  lance_bridge.cpp  lance_bridgeimpl.rs  lib.rs  vortex_bridge.cpp  vortex_bridgeimpl.rs
cpp/src/format/iceberg/: iceberg_common.cpp
cpp/src/format/lance/: lance_common.cpp  lance_table_reader.cpp
cpp/src/format/parquet/: parquet_chunk_reader.cpp  parquet_format_reader.cpp  parquet_writer.cpp
cpp/src/format/vortex/: vortex_format_reader.cpp  vortex_v2_format_reader.cpp  vortex_v2_writer.cpp  vortex_writer.cpp
cpp/src/format/vortex/vx-bridge/: Cargo.toml
cpp/src/format/vortex/vx-bridge/src/: bridgeimpl.rs  fscpp.rs  lib.rs
cpp/src/transaction/: transhandler.cpp
cpp/test/: api_properties_test.cpp  api_transaction_test.cpp  api_writer_reader_test.cpp  s3_client_metrics_test.cpp  s3_client_test.cpp  s3_file_system_test.cpp  s3_tls_version_test.cpp  test_env.cpp
cpp/test/ffi/: ffi_filesystem_test.c  ffi_manifest_test.c
cpp/test/filesystem/: cloud_file_system_test.cpp  cloud_fs_metrics_test.cpp  local_file_system_test.cpp  s3_crt_build_test.cpp
cpp/test/format/: column_groups_wr_test.cpp  external_table_arn_test.cpp  external_table_test.cpp  format_reader_test.cpp  schema_caster_test.cpp
cpp/test/format/iceberg/: iceberg_storage_options_test.cpp
cpp/test/format/lance/: lance_storage_options_test.cpp
cpp/test/format/parquet/: file_writer_test.cpp
cpp/test/format/vortex/: basic_test.cpp  sparse_file_test.cpp  vortex_v2_test.cpp
cpp/test/include/: test_env.h
cpp/test/packed/: long_string_test.cpp  packed_test_base.h
docs/: cross-tenant-cloud-access.md  type-adapter-design.md
python/milvus_storage/: __init__.py  _ffi.py  properties.py  transaction.py
python/tests/: test_transaction.py
scala-test/: build.sbt
tests/: config.py
tests/integration/external_table/: test_external_table.py
